@@ -430,6 +430,7 @@ extern int rand_r(unsigned long *ctx);
 extern char *itoa(int __val, char *__s, int __radix);
 
 /**
+ \ingroup avr_stdlib
    The function ltoa() converts the long integer value from \c val into an
    ASCII representation that will be stored under \c s.  The caller
    is responsible for providing sufficient storage in \c s.
@@ -444,6 +445,7 @@ extern char *itoa(int __val, char *__s, int __radix);
 extern char *ltoa(long int __val, char *__s, int __radix);
 
 /**
+ \ingroup avr_stdlib
    The function utoa() converts the unsigned integer value from \c val into an
    ASCII representation that will be stored under \c s.  The caller
    is responsible for providing sufficient storage in \c s.
@@ -458,6 +460,7 @@ extern char *ltoa(long int __val, char *__s, int __radix);
 extern char *utoa(unsigned int __val, char *__s, int __radix);
 
 /**
+ \ingroup avr_stdlib
    The function ultoa() converts the unsigned long integer value from
    \c val into an
    ASCII representation that will be stored under \c s.  The caller
@@ -472,10 +475,12 @@ extern char *utoa(unsigned int __val, char *__s, int __radix);
 */
 extern char *ultoa(unsigned long int __val, char *__s, int __radix);
 
-/** Highest number that can be generated by random(). */
+/**  \ingroup avr_stdlib
+Highest number that can be generated by random(). */
 #define	RANDOM_MAX 0x7FFFFFFF
 
 /**
+ \ingroup avr_stdlib
      The random() function computes a sequence of pseudo-random integers in the
      range of 0 to \c RANDOM_MAX (as defined by the header file <stdlib.h>).
 
@@ -488,11 +493,13 @@ extern char *ultoa(unsigned long int __val, char *__s, int __radix);
 */
 extern long random(void);
 /**
+ \ingroup avr_stdlib
    Pseudo-random number generator seeding; see random().
 */
 extern void srandom(unsigned long __seed);
 
 /**
+ \ingroup avr_stdlib
    Variant of random() that stores the context in the user-supplied
    variable located at \c ctx instead of a static library variable
    so the function becomes re-entrant.
@@ -504,6 +511,10 @@ extern long random_r(unsigned long *ctx);
 /*@{*/
 /** \name Conversion functions for double arguments.
  \ingroup avr_stdlib
+ Note that these functions are not located in the default library,
+ <tt>libc.a</tt>, but in the mathematical library, <tt>libm.a</tt>.
+ So when linking the application, the \c -lm option needs to be
+ specified.
 */
 /** Bit value that can be passed in \c flags to dtostre(). */
 #define DTOSTR_ALWAYS_SIGN 0x01        /* put '+' or ' ' for positives */
